fix layout issues

--- a/src/styles/global.pcss
+++ b/src/styles/global.pcss
@@ -66,7 +66,7 @@ hr {
 
 /* Global Layout */
 .layout-wrapper {
-  @apply mx-auto max-w-xl px-4;
+  @apply mx-auto max-w-default px-4 md:px-0;
 }
 
 .title {
